k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: linkpouch-dev
  labels:
    name: linkpouch-dev
    environment: development
